[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/StartMenu.gd" type="Script" id=1]

[node name="Node2D2" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.305882, 0.407843, 0.564706, 1 )

[node name="MenuButtons" type="ColorRect" parent="CanvasLayer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Newgamebutton" type="Button" parent="CanvasLayer/Background/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -50.0
margin_right = 55.0
margin_bottom = -30.0
rect_scale = Vector2( 0.991516, 1 )
text = "Start new game"

[node name="Load game" type="Button" parent="CanvasLayer/Background/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -20.0
margin_right = 55.0
text = "Load game"

[node name="quit game" type="Button" parent="CanvasLayer/Background/MenuButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 10.0
margin_right = 55.0
margin_bottom = 30.0
text = "Quit game"

[node name="Newgame" type="ColorRect" parent="CanvasLayer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Backbutton" type="Button" parent="CanvasLayer/Background/Newgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 0.5
margin_right = -5.0
margin_bottom = 24.5
text = "Back"

[node name="Start game" type="Button" parent="CanvasLayer/Background/Newgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 0.5
margin_right = 55.0
margin_bottom = 24.5
text = "Start"

[node name="Savenametext" type="LineEdit" parent="CanvasLayer/Background/Newgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -29.5
margin_right = 55.0
margin_bottom = -5.5
text = "New save"

[node name="Warning" type="RichTextLabel" parent="CanvasLayer/Background/Newgame"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = -49.5
margin_right = 80.5
margin_bottom = -25.5
text = "This field can't be empty!"

[node name="Warning2" type="RichTextLabel" parent="CanvasLayer/Background/Newgame"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = -64.5
margin_right = 80.5
margin_bottom = -34.5
text = "You already have a save with this name"

[node name="Warning3" type="RichTextLabel" parent="CanvasLayer/Background/Newgame"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -69.5
margin_right = 140.0
margin_bottom = -33.5
text = "Savename cannot contain these characters:
\\ / . : , ; ? * | \" ' "

[node name="Loadgame" type="ColorRect" parent="CanvasLayer/Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Backbutton" type="Button" parent="CanvasLayer/Background/Loadgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 0.5
margin_right = -5.0
margin_bottom = 24.5
text = "Back"

[node name="Load game" type="Button" parent="CanvasLayer/Background/Loadgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 0.5
margin_right = 55.0
margin_bottom = 24.5
text = "Start"

[node name="Warning" type="RichTextLabel" parent="CanvasLayer/Background/Loadgame"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -69.5
margin_right = 115.0
margin_bottom = -45.5
text = "Please remember to select a save!!"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Background/Loadgame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -39.5
margin_right = 55.0
margin_bottom = -5.5

[node name="Savefiles" type="MenuButton" parent="CanvasLayer/Background/Loadgame/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 27.0
text = "Select save"

[connection signal="pressed" from="CanvasLayer/Background/MenuButtons/Newgamebutton" to="." method="_on_Newgame_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/MenuButtons/Load game" to="." method="_on_Load_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/MenuButtons/quit game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Newgame/Backbutton" to="." method="_on_Backbutton_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/Newgame/Start game" to="." method="_on_Start_game_pressed"]
[connection signal="text_changed" from="CanvasLayer/Background/Newgame/Savenametext" to="." method="_on_Savenametext_text_changed"]
[connection signal="pressed" from="CanvasLayer/Background/Loadgame/Backbutton" to="." method="_on_Backbutton_pressed2"]
[connection signal="pressed" from="CanvasLayer/Background/Loadgame/Load game" to="." method="_on_Load_savegame_pressed"]
